# micro-trading

./: .gitignore  docker-compose.yml  implementation_plan.md.resolved  micro-trading-bot.md  momentum-burst-strategy.md  pyproject.toml
backend/: config.py  main.py
backend/api/routes/: analytics_routes.py  backtest_routes.py  config_routes.py  health.py  live_routes.py  paper_trades_routes.py  runner.py  services_routes.py  stats.py  ws_routes.py
backend/core/backtester/: fill_model.py  tick_replayer.py
backend/core/data/: normalizer.py
backend/core/data/feeds/: binance_ws.py
backend/core/ml/: features.py  scorer.py
backend/core/strategy/: base.py
backend/db/: session.py
backend/models/: entry_signal.py  market_data.py  paper_trade.py
backend/services/: runner_manager.py
configs/: default.yaml
deploy/: algo-api.service  algo-paper.service  algo-recorder.service  algo-retrain.service  algo-retrain.timer
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/settings/: page.tsx
frontend/app/trades/: page.tsx
frontend/components/: data-stats.tsx  equity-curve.tsx  live-market-card.tsx  pnl-summary.tsx  service-card.tsx  sidebar.tsx  trade-analytics.tsx  trades-table.tsx
frontend/lib/: api.ts  use-live-ws.ts
workers/: auto_retrain.py  build_training_data.py  data_retention.py  diagnose.py  grid_search.py  grid_search_advanced.py  grid_search_b.py  micro_runner.py  paper_trader.py  run_advanced_backtest.py  run_backtest.py  train_model.py
(+3 files in other folders)
